@@ -11,22 +11,49 @@ WriteMakefile(
     PREREQ_PM => 
     {
         'App::XML::DocBook::Builder' => 0,
+        'base' => 0,
+        'Carp' => 0,
+        'CGI' => 0,
+        'CGI::Minimal' => 0,
+        'Class::Accessor' => 0,
+        'Cwd' => 0,
         'DateTime' => 0,
+        'DBI' => 0,
+        'Encode' => 0,
+        'Exporter' => 0,
+        'Fcntl' => 0,
+        'File::Basename' => 0,
+        'File::Copy' => 0,
+        'File::Find' => 0,
+        'File::Find::Object' => 0,
+        'File::Find::Object::Rule' => 0,
+        'File::Path' => 0,
+        'File::Spec' => 0,
+        'File::Spec::Functions' => 0,
         'HTML::TokeParser::Simple' => 0,
         'IO::All' => 0,
         'Spork::Shlomify' => '0.0200',
+        'strict' => 0,
         'String::ShellQuote' => 0,
         'Task::Latemp' => 0,
         'Template::Preprocessor::TTML' => 0,
         'Term::ReadPassword' => 0,
+        'Test::More' => 0,
         'Text::VimColor' => 0,
+        'utf8' => 0,
+        'vars' => 0,
+        'warnings' => 0,
+        'XML::Feed' => 0,
         'XML::Grammar::Fiction' => '0.7.0',
         'XML::Grammar::Fortune' => '0.0107',
         'XML::Grammar::Fortune::Synd::App' => 0,
+        'XML::Grammar::Fortune::ToText' => 0,
         'XML::Grammar::ProductsSyndication' => '0.0302',
         'XML::Grammar::Screenplay' => '0.7.0',
         'XML::LibXML::XPathContext' => 0,
         'XML::LibXSLT' => 0,
+        'XML::Parser' => 0,
+        'XML::Writer' => 0,
     },
     dist                => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean               => { FILES => 'Task-Sites-ShlomiFish-*' },
